--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,9 @@ backups
 /doc/src/manual/usman.idx
 /doc/src/manual/usman.ilg
 /doc/src/manual/usman.log
+Modelle/omnet_modell_1/test1/.oppbuildspec
+Modelle/omnet_modell_1/tictoc/.project
+Modelle/omnet_modell_1/tictoc/.oppbuildspec
+Modelle/omnet_modell_1/tictoc/.cproject
+Modelle/omnet_modell_1/test1/.cproject
+Modelle/omnet_modell_1/test1/.project
