--- a/Modelle/omnet_modell/test/switch.ini
+++ b/Modelle/omnet_modell/test/switch.ini
@@ -1,5 +1,5 @@
 [General]
-network = smallNetwork
+network = test
 
 **.switch.phy[0].mac.address = "0A-00-00-00-00-01"
 **.switch.phy[1].mac.address = "0A-00-00-00-00-02"
