--- a/Modelle/omnet_modell/test3/omnetpp.ini
+++ b/Modelle/omnet_modell/test3/omnetpp.ini
@@ -52,40 +52,42 @@ include gateway2.ini
 include switch.ini
 
 #Configuration sending node
-**.sensor[0].sourceApp[0].idDataFrames = "1"
-**.sensor[0].sourceApp[0].initialDataFrameOffset = "0"				
-**.sensor[0].sourceApp[0].periodicityDataFrames = "0.010"						
-**.sensor[0].sourceApp[0].dataLengthDataFrames = "8"
+#**.sensor[0].sourceApp[0].idDataFrames = "1"
+#**.sensor[0].sourceApp[0].initialDataFrameOffset = "0"				
+#**.sensor[0].sourceApp[0].periodicityDataFrames = "0.010"						
+#**.sensor[0].sourceApp[0].dataLengthDataFrames = "8"
+#
+#**.sensor[1].sourceApp[0].idDataFrames = "2"
+#**.sensor[1].sourceApp[0].initialDataFrameOffset = "0.00020"				
+#**.sensor[1].sourceApp[0].periodicityDataFrames = "0.020"						
+#**.sensor[1].sourceApp[0].dataLengthDataFrames = "8"
+#
+#**.sensor[2].sourceApp[0].idDataFrames = "3"
+#**.sensor[2].sourceApp[0].initialDataFrameOffset = "0.00040"				
+#**.sensor[2].sourceApp[0].periodicityDataFrames = "0.030"						
+#**.sensor[2].sourceApp[0].dataLengthDataFrames = "8"
+#
+#**.sensor[3].sourceApp[0].idDataFrames = "4"
+#**.sensor[3].sourceApp[0].initialDataFrameOffset = "0.00060"				
+#**.sensor[3].sourceApp[0].periodicityDataFrames = "0.100"						
+#**.sensor[3].sourceApp[0].dataLengthDataFrames = "8"
 
-**.sensor[1].sourceApp[0].idDataFrames = "2"
-**.sensor[1].sourceApp[0].initialDataFrameOffset = "0.00020"				
-**.sensor[1].sourceApp[0].periodicityDataFrames = "0.015"						
-**.sensor[1].sourceApp[0].dataLengthDataFrames = "8"
-
-**.sensor[2].sourceApp[0].idDataFrames = "3"
-**.sensor[2].sourceApp[0].initialDataFrameOffset = "0.00040"				
-**.sensor[2].sourceApp[0].periodicityDataFrames = "0.020"						
-**.sensor[2].sourceApp[0].dataLengthDataFrames = "8"
-
-**.sensor[3].sourceApp[0].idDataFrames = "4"
-**.sensor[3].sourceApp[0].initialDataFrameOffset = "0.00060"				
-**.sensor[3].sourceApp[0].periodicityDataFrames = "0.333"						
-**.sensor[3].sourceApp[0].dataLengthDataFrames = "8"
-
-#**.sensor[4].sourceApp[0].idDataFrames = "5"
-#**.sensor[4].sourceApp[0].initialDataFrameOffset = "0.00080"				
-#**.sensor[4].sourceApp[0].periodicityDataFrames = "0.400"						
-#**.sensor[4].sourceApp[0].dataLengthDataFrames = "8"
+**.sensor.sourceApp[0].idDataFrames = "1"
+**.sensor.sourceApp[0].initialDataFrameOffset = "0"				
+**.sensor.sourceApp[0].periodicityDataFrames = "0.010"						
+**.sensor.sourceApp[0].dataLengthDataFrames = "8"
 
 #Configuration receiving node
-**.aktor[0].bufferIn[0].idIncomingFrames = "1,2"
-**.aktor[0].sourceApp[0].idDataFrames = "10"
-
-**.aktor[1].bufferIn[0].idIncomingFrames = "2"
-**.aktor[1].sourceApp[0].idDataFrames = "20"
-
-**.aktor[2].bufferIn[0].idIncomingFrames = "2,3,4"
-**.aktor[2].sourceApp[0].idDataFrames = "30"
+#**.aktor[0].bufferIn[0].idIncomingFrames = "1,2"
+#**.aktor[0].sourceApp[0].idDataFrames = "10"
+#
+#**.aktor[1].bufferIn[0].idIncomingFrames = "2"
+#**.aktor[1].sourceApp[0].idDataFrames = "20"
+#
+#**.aktor[2].bufferIn[0].idIncomingFrames = "2,3,4"
+#**.aktor[2].sourceApp[0].idDataFrames = "30"
+**.aktor.bufferIn[0].idIncomingFrames = "1,2"
+**.aktor.sourceApp[0].idDataFrames = "10"
 
 
 [Config WithQ]
