完成time series analysis的介绍

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,24 @@
 *.pyc
 *.out
 *.aux
+*.aux
+*.lof
+*.log
+*.lot
+*.fls
+*.out
+*.toc
+*.fmt
+*.fot
+*.cb
+*.cb2
+.*.lb
+*.fdb_latexmk
+*.synctex
+*.synctex(busy)
+*.synctex.gz
+*.synctex.gz(busy)
+*.pdfsync
 .ccls-cache
 .clangd
 .vscode/ipch
